<?xml version="1.0"?>
<package format="3">
  <name>rosapi</name>
  <version>2.3.0</version>
  <description>
Provides services for getting various ROS meta-information, including ROS topic, services, interfaces or
action servers and managing ROS parameters.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosapi</url>
  <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
  <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>

  <author email="jonathan.c.mace@gmail.com">Jonathan Mace</author>
  <maintainer email="blazej@fictionlab.pl">Błażej Sowa</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2action</exec_depend>
  <exec_depend>ros2interface</exec_depend>
  <exec_depend>ros2node</exec_depend>
  <exec_depend>ros2service</exec_depend>
  <exec_depend>ros2topic</exec_depend>
  <exec_depend>rosapi_msgs</exec_depend>
  <exec_depend>rosbridge_library</exec_depend>
  <exec_depend>rosidl_adapter</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <test_depend>ament_cmake_mypy</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>rmw_dds_common</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>shape_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="mapping_rules.yaml"/>
  </export>
</package>
