<?xml version="1.0"?>
<package format="3">
  <name>rosbridge_msgs</name>
  <version>2.3.0</version>
  <description>Interface definitions for the rosbridge library.</description>

  <author email="achim@intermodalics.eu">Hans-Joachim Krauch</author>
  <maintainer email="blazej@fictionlab.pl">Błażej Sowa</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
