<?xml version="1.0"?>
<package format="2">
  <name>rosbridge_server</name>
  <version>2.3.0</version>
  <description>A WebSocket interface to rosbridge.</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosbridge_server</url>
  <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
  <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>

  <author email="jonathan.c.mace@gmail.com">Jonathan Mace</author>
  <maintainer email="blazej@fictionlab.pl">Błażej Sowa</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>python3-tornado</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>rosbridge_library</exec_depend>
  <exec_depend>rosbridge_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>action_msgs</test_depend>
  <test_depend>ament_cmake_mypy</test_depend>
  <test_depend>example_interfaces</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>python3-autobahn</test_depend>
  <test_depend>python3-twisted</test_depend>
  <test_depend>rcl_interfaces</test_depend>
  <test_depend>std_srvs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
