<?xml version="1.0"?>
<package format="3">
  <name>rosbridge_test_msgs</name>
  <version>2.3.0</version>
  <description>
    Message and service definitions used in internal tests for rosbridge packages.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosbridge_library</url>
  <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
  <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>

  <author email="jonathan.c.mace@gmail.com">Jonathan Mace</author>
  <maintainer email="blazej@fictionlab.pl">Błażej Sowa</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
